force-app/main/default/objects/Health_Care_Faciities__c/Health_Care_Faciities__c.object-meta.xml
<CustomObject>
    <label>Health Care Faciities</label>
    <nameField>
        <label>Health Care Faciities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Care Faciitiess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>