force-app/main/default/objects/Health_Care_Faciities__c/fields/Is_Person__c.field-meta.xml
<CustomField>
    <fullName>Is_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person</label>
    <type>Checkbox</type>
</CustomField>