force-app/main/default/objects/Health_Care_Faciities__c/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Provider ID</label>
    <type>AutoNumber</type>
</CustomField>