force-app/main/default/objects/Health_Care_Faciities__c/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <label>Specialist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Massage</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Surgion</fullName>
            </value>
            <value>
                <fullName>Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>